# CMake-playground

./: LICENSE.txt  README.md
CMake_Course_yt/: course info.md
Cmake-playground/: CMakeLists.txt
Cmake-playground/include/: placeholder.h
Cmake-playground/scripts/: placeholder.py
Cmake-playground/src/: BinaryFetch_cross_platform_prototype.cpp  basic_cross_platform_cpp_code.cpp  gpu_name.cpp  main.cpp
Cmake-playground/tests/: test.cpp
Documented txt infos/: 02_MSVC_compiler.md  03_Clang_compiler.md  04_GCC_compiler.md  05_clang-cl.md  06_cpp_compiler_docs.md  07_binaryfetch_issues.md  08_clang_and_cmake_on_visual_studio.md  10_basic CMake commands.md  11_CMake build & run commands guild.md
mini_test_projects/03_nvapi_link_test/: CMakeLists.txt  main.cpp
mini_test_projects/04_Nvapi_link/: CMakeLists.txt  main.cpp
mini_test_projects/04_Nvapi_link/output/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  NvapiLinkTest.sln  NvapiLinkTest.vcxproj  NvapiLinkTest.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
mini_test_projects/04_Nvapi_link/output/NvapiLinkTest.dir/Release/: NvapiLinkTest.exe.recipe
mini_test_projects/04_Nvapi_link/output/NvapiLinkTest.dir/Release/NvapiLinkTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
mini_test_projects/04_Nvapi_link/output/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
mini_test_projects/04_Nvapi_link/output/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate
mini_test_projects/04_Nvapi_link/output/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
mini_test_projects/04_Nvapi_link/output/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
mini_test_projects/05_Nvapi_link/: CMakeLists.txt  main.cpp
temp/: side-feature.md
txt infos/: 01_what_is_abi.md  02_MSVC_compiler.md  07_binaryfetch_issues.md  09_Cmake + Clang-cl Test Project (visual Studio).md  11_CMake build & run commands guild.md
(+5 files in other folders)
